--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task Management UI</title>
+    <title>TO-DO List</title>
     <script src="https://kit.fontawesome.com/afaa046a39.js" crossorigin="anonymous" async></script>
     <link rel="stylesheet" href="css/styles.css">
 </head>
