Atualizar contagem de tarefas pendentes na página inicial

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="content">
             <header>
                 <h1>Meus projetos</h1>
-                <span class="task-count">0 tarefas pendentes</span>
+                <span class="task-count">nenhuma tarefa pendente</span>
             </header>
             <ul class="task-list">
             </ul>
