Atualizar estilo do CSS e título da página

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TO-DO List</title>
+    <title>TO-DO List - Jean Carlos</title>
     <script src="https://kit.fontawesome.com/afaa046a39.js" crossorigin="anonymous" async></script>
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -13,7 +13,7 @@
     <div class="flex-container">
         <div class="content">
             <header>
-                <h1>Meus projetos</h1>
+                <h1>Lista de projetos à fazer</h1>
                 <span class="task-count">nenhuma tarefa pendente</span>
             </header>
             <ul class="task-list">
